--- a/gatewayAll/docker-compose.yml
+++ b/gatewayAll/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   apisix:
-    image: registry.cn-shenzhen.aliyuncs.com/maobuji/apisix:1.4.1
+    image: registry.cn-shenzhen.aliyuncs.com/maobuji/apisix:latest
     restart: always
     volumes:
       - ./apisix_log:/usr/local/apisix/logs
