通过镜像引入管理端

--- a/gatewayAll/docker-compose.yml
+++ b/gatewayAll/docker-compose.yml
@@ -79,8 +79,8 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=123456
     volumes:
-      - /tmp/datadir:/var/lib/mysql
-      - /tmp/conf.d:/etc/mysql/conf.d
+      - ./mysql_data:/var/lib/mysql
+      - ./mysql_conf:/etc/mysql/conf.d
       - ./script/db:/docker-entrypoint-initdb.d
     networks:
       apisix-dashboard:
