--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,4 +1,5 @@
 FROM docker.elastic.co/logstash/logstash:7.8.0
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
-RUN logstash-plugin install logstash-output-elasticsearch
+RUN logstash-plugin install logstash-input-jdbc --no-verify
+RUN logstash-plugin install logstash-output-elasticsearch --no-verify
