--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -2,7 +2,7 @@ FROM docker.elastic.co/logstash/logstash:7.8.1
 USER root
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
-RUN yum update -y && yum install -y java-1.8.0-openjdk-devel.x86_64 which && yum clean all
+# RUN yum update -y && yum install -y java-1.8.0-openjdk-devel.x86_64 which && yum clean all
 RUN logstash-plugin install logstash-output-jdbc
 RUN logstash-plugin install logstash-output-elasticsearch
 RUN logstash-plugin install logstash-input-elasticsearch
