--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,5 +1,17 @@
 FROM docker.elastic.co/logstash/logstash:7.8.1
 USER root
+
+RUN \
+yum install glibc-common wget -y
+
+RUN \
+wget -O /opt/jdk-8u221-linux-x64.tar.gz https://pub.caiweiqiang.cn/jdk/jdk-8u221-linux-x64.tar.gz && \
+tar -xf /opt/jdk-8u221-linux-x64.tar.gz && \
+rm -rf /opt/jdk-8u221-linux-x64.tar.gz
+
+ENV JAVA_HOME=/opt/jdk1.8.0_221
+ENV PATH=$JAVA_HOME/bin:$PATH
+
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
 # RUN yum update -y && yum install -y java-1.8.0-openjdk-devel.x86_64 which && yum clean all
